@@ -1,6 +1,7 @@
 == In Git
 
 === New features
+* New --i18n option to list keywords in various languages. (Aslak Hellesøy)
 * Added a Tcl example using Sam Stephenson's ruby-tcl (Aslak Hellesøy)
 * Added * as a synonym for Given/When/Then/And/But (for all i18n languages). (#462 Aslak Hellesøy)
 * The HTML formatter produces a much nicer report, with TextMate link integration. (Rob Aldred)
@@ -8,7 +9,6 @@
 
 === Changed Features
 * Per-word trailing-space setting for step keywords using '<'.  See 'fr' in languages.yml for example. (#525 Gregory Hnatiuk)
-* --language is deprecated and will be removed in 0.5.0: http://wiki.github.com/aslakhellesoy/cucumber/spoken-languages (Aslak Hellesøy)
 * Formatters will no longer be passed File objects. They must use ensure_io, ensure_file or ensure_dir. (Aslak Hellesøy)
 
 === Bugfixes
@@ -22,6 +22,7 @@
 
 === Removed Features
 * All Rails-related code is in a separate gem: cucumber-rails. Install that if you're working with Rails. (#483 Aslak Hellesøy)
+* --language is removed: http://wiki.github.com/aslakhellesoy/cucumber/spoken-languages (Aslak Hellesøy)
 
 == 0.4.4 2009-11-13
 
